# keychat-backend

./: AES.py  KDC.py  KDC_test.py  README.md  announcement_client.py  chat_client.py  contacts_client.py  db_create.py  db_insertion_examples.txt  employee_client.py  main.py  pyproject.toml  replit.nix  requirements.txt
controllers/: announcement_controller.py  chat_controller.py  contacts_controller.py  employee_controller.py
database/: db.py
