[tool.poetry]
name = "repl-nix-keychat-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_keychat_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
eventlet = "^0.36.1"
fastapi = "^0.110.1"
python-socketio = "^4.6.0"
socketio = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
